--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<!-- aqui se renderizara toda la app -->
-
 <app-header></app-header>
 
-
-<app-info-pais></app-info-pais>
+<router-outlet></router-outlet>
