--- a/src/app/shared/stats-page/stats-page.component.html
+++ b/src/app/shared/stats-page/stats-page.component.html
@@ -1,4 +1,5 @@
 
+
 <ng-container *ngIf="statsPais || errorRed; else load">
     <app-stats  [paisName]="paisName" 
                 [paisNameEsp]="paisNameEsp" 
@@ -6,7 +7,9 @@
                 [errorRed]="errorRed"></app-stats>
 </ng-container>
 
-
+<!-- icono de carga -->
 <ng-template #load>
     <mat-spinner></mat-spinner>
 </ng-template>
+
+
